manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnk8s-app-service
spec:
  type: ClusterIP
  selector:
    app: learnk8s
  ports:
  - port: 80
    targetPort: 4000
